--- a/HTML-Personal site/index.html
+++ b/HTML-Personal site/index.html
@@ -24,6 +24,7 @@
     <p><a href="https://github.com/Prakhaarrr">Github</a></p>
     <p><a href="https://mobile.twitter.com/prakhaaarrr">Twitter</a></p>
     <p><a href="https://www.instagram.com/dadheech_prakhar/">Instagram</a></p>
+    <p><a href="form.html">Form</a>{Any queries}</p>
 
 
     <hr size="3" noshade>
